feat(graalvm): bake --enable-native-access=ALL-UNNAMED into native images
Native modules call System.loadLibrary from the unnamed module; since
JDK 24 (JEP 472) that emits a restricted-method warning at startup and
will be blocked in a future release. The JVM run path already passed the
flag — bake it into the native-image build args too so the produced
binary starts clean and stays forward-compatible.